--- a/index.html
+++ b/index.html
@@ -161,12 +161,14 @@
      </div>
 
      <footer>
-          <div class="title">Sweetie Donut</div>
-          <p>부산광역시 부산진구 서전로 10번길 28<br>
-          오기빌딩 13층 스위티도넛</p>
-          <p>사업자 등록번호 : 123-45-67891 | 대표이사 : 도우너<br>
-          TEL : 080-123-4567 | 개인정보관리책임자 : 고길동</p>
-          <p>COPYRIGHT Ⓒ 2022 SWEETIE DONUT. ALL RIGHTS RESERVED.</p>
+          <div class="wrapper">
+               <div class="title">Sweetie Donut</div>
+               <p>부산광역시 부산진구 서전로 10번길 28<br>
+               오기빌딩 13층 스위티도넛</p>
+               <p>사업자 등록번호 : 123-45-67891 | 대표이사 : 도우너<br>
+               TEL : 080-123-4567 | 개인정보관리책임자 : 고길동</p>
+               <p>COPYRIGHT Ⓒ 2022 SWEETIE DONUT. ALL RIGHTS RESERVED.</p>
+          </div>
      </footer>
 
 
