--- a/index.html
+++ b/index.html
@@ -9,37 +9,39 @@
 </head>
 <body>
      <header>
-          <h1>
-               <a href="#">
-                    <img class="m" src="./images/logoMobile.png" alt="">
-                    <img class="pc" src="./images/logo.png" alt="">
-               </a>
-          </h1>
-          <div class="btn-nav">
-               <button type="button">
-                    <span>메뉴버튼</span>
-               </button>
-          </div>
-          <nav>
-               <div class="btn-close">
-                    <button type="button">엑스버튼</button>
+          <div class="wrap">
+               <h1>
+                    <a href="#">
+                         <img class="m" src="./images/logoMobile.png" alt="">
+                         <img class="pc" src="./images/logo.png" alt="">
+                    </a>
+               </h1>
+               <div class="btn-nav">
+                    <button type="button">
+                         <span>메뉴버튼</span>
+                    </button>
                </div>
-               <ul class="gnb">
-                    <li><a href="#">FIND A SHOP</a></li>
-                    <li><a href="#">DOUGHNUTS</a></li>
-                    <li><a href="#">COFFEE & DRINKS</a></li>
-                    <li><a href="#">CATERING</a></li>
-                    <li><a href="#">SEND A GIFT</a></li>
-                    <li><a href="#">CAREERS</a></li>
-                    <li><a href="#">NEED A HELP?</a></li>
-               </ul>
-               <ul class="log-join">
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Join</a></li>
-               </ul>
-          </nav>
-          <div class="btn-mem">
-               <button type="button"><img src="./images/btnMem.png" alt=""></button>
+               <nav>
+                    <div class="btn-close">
+                         <button type="button">엑스버튼</button>
+                    </div>
+                    <ul class="gnb">
+                         <li><a href="#">FIND A SHOP</a></li>
+                         <li><a href="#">DOUGHNUTS</a></li>
+                         <li><a href="#">COFFEE & DRINKS</a></li>
+                         <li><a href="#">CATERING</a></li>
+                         <li><a href="#">SEND A GIFT</a></li>
+                         <li><a href="#">CAREERS</a></li>
+                         <li><a href="#">NEED A HELP?</a></li>
+                    </ul>
+                    <ul class="log-join">
+                         <li><a href="#">Login</a></li>
+                         <li><a href="#">Join</a></li>
+                    </ul>
+               </nav>
+               <div class="btn-mem">
+                    <button type="button"><img src="./images/btnMem.png" alt=""></button>
+               </div>
           </div>
      </header>
      <div class="banner">
