--- a/index.html
+++ b/index.html
@@ -152,10 +152,15 @@
           </div>
           <div class="event">
                <div class="box" data-aos="fade-up" data-aos-duration="1000">
-                    <a href="#"><img src="./images/bnFranMobile.png" alt=""></a>
+                    <a class="pc" href="#"><img src="./images/bgSns.jpg" alt=""></a>
+               </div>
+               <div class="box" data-aos="fade-up" data-aos-duration="1000">
+                    <a class="m" href="#"><img src="./images/bnFranMobile.png" alt=""></a>
+                    <a class="pc" href="#"><img src="./images/franchise.jpg" alt=""></a>
                </div>
                <div class="box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
-                    <a href="#"><img src="./images/bnCollaboMobile.png" alt=""></a>
+                    <a class="m" href="#"><img src="./images/bnCollaboMobile.png" alt=""></a>
+                    <a class="pc" href="#"><img src="./images/colabo.jpg" alt=""></a>
                </div>
           </div>
      </div>
@@ -182,6 +187,7 @@
                $nav.style.left = "-100%";
           });
      </script>
+     
      <script src="js/aos.js"></script>
      <script>
           AOS.init();
